--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My First Web Page</title>
+<title>CV TETART Julian</title>
 </head>
 <body>
-<h1>My First Web Page</h1>
-<p>My First Paragraph</p>
-<p>My Second Paragraph</p>
+<iframe src="/CV TETART Julian.pdf#toolbar=0" width="100%" height="500px">
 
 </body>
 </html>
