--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html style="height: max-content;width: max-content;">
 <head>
 <title>CV TETART Julian</title>
 </head>
 <body>
-<iframe src="/CV TETART Julian.pdf#toolbar=0" width="100%" height="100%">
-</iframe>
+    <iframe src="/CV TETART Julian.pdf#toolbar=0" width="100%" height="100%">
+    </iframe>
 
 </body>
 </html>
