--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: max-content;width: max-content;">
+<html style="height: 100%;width: 100%;">
 <head>
 <title>CV TETART Julian</title>
 </head>
