--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>CV TETART Julian</title>
 </head>
-<body>
-    <iframe src="/CV TETART Julian.pdf#toolbar=0" width="100%" height="100%">
+<body style="height: 100%;">
+    <iframe src="/CV TETART Julian.pdf" width="100%" height="100%">
     </iframe>
 
 </body>
